fixing issue collapsing the menubar + cleaning some comments

--- a/client/app/styles/base/_base.scss
+++ b/client/app/styles/base/_base.scss
@@ -9,8 +9,6 @@ table, thead, tbody, tfoot, tr, th, td {
   border: 0;
   outline: none;
   background: none;
-  font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
