--- a/client/app/styles/layout/_header.scss
+++ b/client/app/styles/layout/_header.scss
@@ -212,7 +212,6 @@ noindex:-o-prefocus, .logo span {
   /* phone */
   .main-search {
     float: right;
-    margin-top: 22px;
   }
   .main-search input {
     padding: 15px 0;
