--- a/client/app/styles/modules/_navbar.scss
+++ b/client/app/styles/modules/_navbar.scss
@@ -12,8 +12,8 @@
   span {
     display: table-cell;
     vertical-align: middle;
-    height: 110px;
     transition: height 0.3s;
+    height: $navbar-height;
   }
 }
 
@@ -27,7 +27,6 @@
   > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
-    line-height: 110px;
   }
 
   .navbar-nav > .open > a, .navbar-nav > .active > a {
@@ -37,96 +36,7 @@
       border-bottom: 1px solid $navbar-default-link-active--border;
     }
   }
-
-  //li ul {
-  //  //position: absolute;
-  //  //z-index: 500;
-  //  //top: 100%;
-  //  //left: -9999px;
-  //  //width: 190px;
-  //  border-bottom: 1px solid #e9e9e9;
-  //  background: #2d3e50;
-  //  opacity: 0;
-  //  transition: opacity 0.3s;
-  //}
-  //  border-radius: 0px !important;
-  //  font-size: $navbar-font-size;
-  //
-  //  .container {
-  //    border-bottom: .1rem solid hsla(0, 0%, 100%, .3);
-  //  }
-  //
-  //  .navbar-brand {
-  //    font-size: $navbar-font-size;
-  //  }
-  //
-  //  //uncollapsed nav
-  //  @media (min-width: $grid-float-breakpoint) {
-  //    .navbar-nav {
-  //      > li > a {
-  //        &:hover,
-  //        &:focus {
-  //          outline: none;
-  //          color: $navbar-inverse-link-hover-color;
-  //          border-bottom: .4rem solid $navbar-inverse-link-active-border-color;
-  //        }
-  //      }
-  //      > .active > a {
-  //        &,
-  //        &:hover,
-  //        &:focus {
-  //          outline: none;
-  //          color: $navbar-inverse-link-active-color;
-  //          border-bottom: .4rem solid $navbar-inverse-link-active-border-color;
-  //        }
-  //      }
-  //    }
-  //  }
-  //
-  //  //.navbar-collapse.collapse {
-  //  //  text-align: center;
-  //  //}
-  //  //
-  //  //.navbar-center {
-  //  //  display: inline-block;
-  //  //  float: none;
-  //  //  margin: 0;
-  //  //}
 }
-
-//
-//.navbar-transparent {
-//  transition: background-color 1s ease;
-//  background-color: transparent;
-//  border: none;
-//}
-//
-//.navbar-transparent.ui-scrollpoint {
-//  background-color: $navbar-inverse-bg;
-//}
-//
-//.navbar-gap {
-//  margin-bottom: $navbar-gap-height;
-//}
-//
-////TODO: create variables
-//.btn-language {
-//  border: .1rem solid hsla(0, 0%, 100%, .6);
-//  border-radius: 1.7rem;
-//  line-height: 0;
-//  padding: 1.7rem 2rem 1.5rem;
-//  transition: background-color .4s, border-color .4s;
-//  color: #fff;
-//  display: block;
-//  font-size: 1.4rem;
-//  font-weight: 600;
-//  background-color: transparent;
-//}
-//
-//.btn-language:hover {
-//  background-color: hsla(0, 0%, 100%, .1);
-//}
-
 // Dropdowns
 .dropdown-menu {
   background-color: $navbar-default-dropdown-bg;
@@ -177,25 +87,11 @@
 
 }
 
-//.dropdown-menu >
-//}
-//
-////  state
-//.dropdown-menu > .active > a {
-//  &,
-//  &:hover,
-//  &:focus {
-//    text-decoration: none;
-//    outline: 0;
-//    color: $navbar-default-dropdown-hover-link-color;
-//    background-color: $navbar-default-dropdown-hover-bg;
-//  }
-//}
-
 .dropdown-menu {
   min-width: 500px;
   left: -200px;
+}
 
-  //background-color: $navbar-default-dropdown-bg;
-  //color: $navbar-default-dropdown-link-color;
+.navbar-toggle {
+  margin: 35px 15px;
 }
