--- a/client/app/styles/variables/_bootstrap-variables.scss
+++ b/client/app/styles/variables/_bootstrap-variables.scss
@@ -41,13 +41,3 @@ $navbar-default-brand-hover-bg: transparent !default;
 $navbar-default-toggle-hover-bg: #ddd !default;
 $navbar-default-toggle-icon-bar-bg: #888 !default;
 $navbar-default-toggle-border-color: #ddd !default;
-
-//project variables
-$navbar-default-link-font-size: $base-font-size-s !default;
-$navbar-default-link-active--border: #2d3e50 !default;
-$navbar-default-dropdown-border-color: #e9e9e9 !default;
-$navbar-default-dropdown-bg: #2d3e50 !default;
-$navbar-default-dropdown-link-color: #ecf0f1 !default;
-$navbar-default-dropdown-hover-bg: #ecf0f1 !default;
-$navbar-default-dropdown-hover-link-color: #2d3e50 !default;
-$navbar-default-dropdown-divider-bg: #ecf0f1 !default;
