--- a/client/app/styles/variables/_variables.scss
+++ b/client/app/styles/variables/_variables.scss
@@ -10,7 +10,17 @@ $base-font-size-xl: ceil(($base-font-size * 1.75)) !default;
 $base-font-weight-light: 100 !default;
 $base-font-color: #808b8d !default;
 
+
 //=header
+//==navbar
+$navbar-default-link-font-size: $base-font-size-s !default;
+$navbar-default-link-active--border: #2d3e50 !default;
+$navbar-default-dropdown-border-color: #e9e9e9 !default;
+$navbar-default-dropdown-bg: #2d3e50 !default;
+$navbar-default-dropdown-link-color: #ecf0f1 !default;
+$navbar-default-dropdown-hover-bg: #ecf0f1 !default;
+$navbar-default-dropdown-hover-link-color: #2d3e50 !default;
+$navbar-default-dropdown-divider-bg: #ecf0f1 !default;
 //$font-size-base: 20px !default;
 //$navbar-height: 120px !default;
 //$navbar-margin-bottom: 0 !default;
